RESOLVED FIXED108251
cloop.rb shouldn't use a method called 'dump' for code generation
https://bugs.webkit.org/show_bug.cgi?id=108251
Summary cloop.rb shouldn't use a method called 'dump' for code generation
Filip Pizlo
Reported 2013-01-29 16:36:06 PST
That method name is already used, and is intended entirely for debug printing. It should never be used for code generation.
Attachments
the patch (6.87 KB, patch)
2013-01-29 16:38 PST, Filip Pizlo
mhahnenberg: review+
Filip Pizlo
Comment 1 2013-01-29 16:38:46 PST
Created attachment 185339 [details] the patch
Mark Lam
Comment 2 2013-01-29 16:44:23 PST
LGTM. Would feel more sure if you can set ENABLE_LLINT=1 ENABLE_JIT=0 in Platform.h and build to make sure it still builds and runs, but I expect it to be fine.
Mark Hahnenberg
Comment 3 2013-01-29 16:54:21 PST
Comment on attachment 185339 [details] the patch r=me
Geoffrey Garen
Comment 4 2013-01-29 16:54:47 PST
> Would feel more sure if you can set ENABLE_LLINT=1 ENABLE_JIT=0 in Platform.h Actually, I believe this build is currently broken for other reasons :(.
Mark Lam
Comment 5 2013-01-29 16:55:31 PST
(In reply to comment #4) > > Would feel more sure if you can set ENABLE_LLINT=1 ENABLE_JIT=0 in Platform.h > > Actually, I believe this build is currently broken for other reasons :(. Sad. =(
Filip Pizlo
Comment 6 2013-01-29 17:00:52 PST
(In reply to comment #5) > (In reply to comment #4) > > > Would feel more sure if you can set ENABLE_LLINT=1 ENABLE_JIT=0 in Platform.h > > > > Actually, I believe this build is currently broken for other reasons :(. > > Sad. =( I fixed the build and tested my change. It's all good.
Filip Pizlo
Comment 7 2013-01-29 17:01:11 PST
Mark Lam
Comment 8 2013-01-29 17:01:41 PST
(In reply to comment #6) > (In reply to comment #5) > > (In reply to comment #4) > > > > Would feel more sure if you can set ENABLE_LLINT=1 ENABLE_JIT=0 in Platform.h > > > > > > Actually, I believe this build is currently broken for other reasons :(. > > > > Sad. =( > > I fixed the build and tested my change. It's all good. Yay! Thank you. =)
Note You need to log in before you can comment on or make changes to this bug.