cloop.rb shouldn't use a method called 'dump' for code generation https://bugs.webkit.org/show_bug.cgi?id=108251

Reviewed by Mark Hahnenberg.
        
Revert http://trac.webkit.org/changeset/141178 and rename 'dump' to 'clDump'.
        
Also made trivial build fixes for !ENABLE(JIT).

* offlineasm/cloop.rb:
* runtime/Executable.h:
(ExecutableBase):
(JSC::ExecutableBase::intrinsicFor):
* runtime/JSGlobalData.h:



git-svn-id: svn://svn.chromium.org/blink/trunk@141185 bbb929c8-8fbe-4397-9dbb-9b2b20218538